--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ header .header__menu .header__menu-item {
   text-shadow: 2.5px 4.33px 5px rgba(0, 0, 0, 0.4);
 }
 /* line 140, ../sass/style.scss */
-header .header__menu .header__menu-item:hover {
+header .header__menu .header__menu-item:hover, header .header__menu .header__menu-item.active {
   color: #428bca;
   text-decoration: none;
   -webkit-text-fill-color: #428bca;
@@ -461,7 +461,7 @@ header.small-wapper .header__menu .header__menu-item {
 .pages .pages__what_we_do .pages__what_we_do_header-title, .pages .pages__what_we_do .pages__what_we_do_bottom-title {
   width: 100%;
   height: 90px;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.5);
   color: #fff;
   display: block;
 }
@@ -497,94 +497,115 @@ header.small-wapper .header__menu .header__menu-item {
   margin: 0 0 0 10%;
   text-align: left;
   position: absolute;
-  left: 0px;
-  bottom: 0px;
-  padding: 0px;
+  left: 0;
+  bottom: 90px;
+  padding: 0;
+  vertical-align: bottom;
 }
-/* line 399, ../sass/style.scss */
+/* line 400, ../sass/style.scss */
 .pages .pages__what_we_do .list-project-min li {
-  height: 397px;
+  height: 100%;
   float: left;
   position: relative;
   width: 25%;
   list-style: none;
-  -webkit-transition: all 0.25s 0s ease;
-  transition: all 0.25s 0s ease;
+  -webkit-transition: all .25s 0s ease;
+  transition: all .25s 0s ease;
+  vertical-align: bottom;
 }
-/* line 407, ../sass/style.scss */
+/* line 409, ../sass/style.scss */
 .pages .pages__what_we_do .list-project-min li a {
   float: left;
   width: 100%;
   height: 100%;
   display: block;
-  bottom: 0px;
-  position: absolute;
-  overflow: hidden;
-  padding: 0px 40px;
+  bottom: 0;
+  position: relative;
+  padding: 0 40px;
+  vertical-align: bottom;
 }
-/* line 417, ../sass/style.scss */
-.pages .pages__what_we_do .list-project-min li h2 {
+/* line 419, ../sass/style.scss */
+.pages .pages__what_we_do .list-project-min li .project_name {
   position: absolute;
   left: 40px;
   right: 40px;
-  bottom: 20px;
+  bottom: -60px;
+  height: 100%;
+  text-align: center;
+  -webkit-transition: all .25s 0s ease;
+  transition: all .25s 0s ease;
+  vertical-align: text-bottom;
+}
+/* line 429, ../sass/style.scss */
+.pages .pages__what_we_do .list-project-min li .project_name h2 {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
   text-align: center;
   color: #fff;
   font-size: 1.5em;
   line-height: 32px;
   font-weight: 700;
   font-family: 'Open Sans';
-  -webkit-transition: all 0.25s 0s ease;
-  transition: all 0.25s 0s ease;
 }
-/* line 431, ../sass/style.scss */
+/* line 441, ../sass/style.scss */
 .pages .pages__what_we_do .list-project-min li figure {
   float: left;
   width: 100%;
-  height: 100%;
+  height: auto;
   position: relative;
-  top: 0;
-  -webkit-transition: all 0.25s 0s ease;
-  transition: all 0.25s 0s ease;
-}
-/* line 439, ../sass/style.scss */
-.pages .pages__what_we_do .list-project-min li figure .preview {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  bottom: 90px;
-  -webkit-box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.5);
-  box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.5);
-  -webkit-transition: all 0.25s 0s ease;
-  transition: all 0.25s 0s ease;
+  -webkit-transition: all .25s 0s ease;
+  transition: all .25s 0s ease;
+  overflow: hidden;
+  padding: 20px 20px 0;
 }
 /* line 450, ../sass/style.scss */
+.pages .pages__what_we_do .list-project-min li figure .preview {
+  width: 100%;
+  -webkit-transition: all .25s 0s ease;
+  transition: all .25s 0s ease;
+  -webkit-box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.5);
+}
+/* line 458, ../sass/style.scss */
 .pages .pages__what_we_do .list-project-min li .readMore {
-  height: 80px;
-  line-height: 80px;
+  height: 30px;
   position: absolute;
-  bottom: 0;
+  bottom: -60px;
   left: 0;
   display: none;
   width: 100%;
-  padding: 0 40px;
-  color: #fff;
-  font-size: 13px;
-  font-weight: 700;
-  text-transform: uppercase;
-  border-bottom: 1px solid #384452;
+  text-transform: capitalize;
   -webkit-transition: all 0.25s 0s ease;
   transition: all 0.25s 0s ease;
+  text-align: center;
+  color: #fff;
+  font-size: 1.3em;
+  font-weight: 700;
+  font-family: 'Open Sans';
 }
-/* line 470, ../sass/style.scss */
+/* line 474, ../sass/style.scss */
+.pages .pages__what_we_do .list-project-min li .project_name_up {
+  -webkit-transform: translate3d(0, -100%, 0);
+}
+/* line 475, ../sass/style.scss */
+.pages .pages__what_we_do .list-project-min li .project_name_up h2 {
+  font-weight: lighter;
+  font-family: Lato,sans-serif;
+}
+/* line 482, ../sass/style.scss */
+.pages .pages__what_we_do .list-project-min li .figure_down img {
+  -webkit-transform: translate3d(0, 40%, 0);
+}
+/* line 489, ../sass/style.scss */
 .pages .pages__who_we_are {
   background: #EEEEEE;
 }
-/* line 473, ../sass/style.scss */
+/* line 492, ../sass/style.scss */
 .pages .pages__get_in_touch {
   background: url(../../images/services-background.png);
 }
-/* line 391, ../sass/style.scss */
+/* line 494, ../sass/style.scss */
 .pages .pages__get_in_touch .working-list {
   margin: 0 auto 24px;
   padding: 0;
@@ -592,39 +613,35 @@ header.small-wapper .header__menu .header__menu-item {
   display: table;
   list-style: none;
 }
-/* line 397, ../sass/style.scss */
+/* line 500, ../sass/style.scss */
 .pages .pages__get_in_touch .working-list li {
   display: table-cell;
   padding: 10px;
 }
-/* line 400, ../sass/style.scss */
+/* line 503, ../sass/style.scss */
 .pages .pages__get_in_touch .working-list li span {
   display: block;
   font-size: 16px;
   color: #aaaaaa;
 }
-/* line 404, ../sass/style.scss */
+/* line 507, ../sass/style.scss */
 .pages .pages__get_in_touch .working-list li span img {
   padding-right: 5px;
   position: relative;
   top: -3px;
 }
-/* line 412, ../sass/style.scss */
+/* line 515, ../sass/style.scss */
 .pages .pages__get_in_touch .contact-text {
   font-weight: bold;
   font-size: 16px;
 }
-/* line 415, ../sass/style.scss */
+/* line 518, ../sass/style.scss */
 .pages .pages__get_in_touch .contact-text .phone {
   padding-top: 20px;
   color: red;
 }
 
-<<<<<<< HEAD
-/* line 422, ../sass/style.scss */
-=======
-/* line 477, ../sass/style.scss */
->>>>>>> 22681e85a9ec9a13ab272e62d89c77f29487c50d
+/* line 525, ../sass/style.scss */
 .back-to-top {
   position: absolute;
   bottom: 20px;
