--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 /*variable*/
-
+@import "compass";
 $blue_light:#1873b7;
  $blue:#0b67aa;
 @-webkit-keyframes downarrow {
@@ -264,26 +264,28 @@ $turquoise:rgba(255, 255, 255, 0.4);
         }
     }
     .pages__we_can_help {
-        background: url(../../images/services-background.png);
+        .container{
+            margin-top: -100px;
+        }
+        background: inline-image("services-background.png");
         h2 {
             font-family: Lato, sans-serif;
-            font-weight: 300;
-            font-size: 40px;
+            font-weight: 400;
+            font-size: 2.8em;
             color: #262626;
             margin: 100px 0 10px 0;
         }
         p{
             color: #262626;
-            font-size: 15px;
+            font-size: 1.2em;
             margin-top: 10px;
-            line-height: 25px;
+            line-height: 1.4em;
         }
         .col-lg-4 p{
             margin-top: 20px;
             font-family: 'Lato', sans-serif;
-            font-size: 14px;
-            line-height: 22px;
-            text-align: justify;
+            font-size: 1em;
+            line-height: 1.4em;
         }
         a{
             display: block;
@@ -294,65 +296,116 @@ $turquoise:rgba(255, 255, 255, 0.4);
                 text-decoration: none;
                 background-position: center -150px !important; text-decoration: none; color:#cc292c;
             }
-            &.e-commerce { background: transparent url(../../images/magento-btn.png) 50% 0 no-repeat; }
-            &.mobile-web { background: transparent url(../../images/mobile-web-btn.png) 50% 0 no-repeat; }
-            &.hire-a-team { background: transparent url(../../images/team-btn.png) 50% 0 no-repeat; }
+            &.e-commerce { background: transparent inline-image("magento-btn.png") 50% 0 no-repeat; }
+            &.mobile-web { background: transparent inline-image("mobile-web-btn.png") 50% 0 no-repeat; }
+            &.hire-a-team { background: transparent inline-image("team-btn.png") 50% 0 no-repeat; }
             h3 {
                 position: relative;
                 bottom: -88px;
                 text-decoration: none;
-                font-size: 32px;
+                font-size: 1.6em;
                 color: #d4232b ;
-                line-height: 27px;
                 &:hover { color:#cc292c; }
             }
         }
-        .product-list {
-            margin: 0 auto 24px;
-            padding: 0;
-            border-spacing: 12px;
-            width: 1004px;
-            display: table;
+        .list-icon-farmus_wapper{
+            position: absolute;
+            width: 100%;
+            bottom: 50px;
+            background-color: #fff;
+            background-image: inline-image("bg02.png"), inline-image("bg03.png"), inline-image("bg01.png");
+            background-position: top left,  bottom left,    top left;
+            background-size: 100% 6em, 100% 6em,    auto;
+            background-repeat: no-repeat,   no-repeat,  repeat;
+        }
+        .list-icon-farmus_content {
+            margin: 0 5%;
+            padding: 5px 0 5px;
+            width: 90%;
+            display: inline-block;
             list-style: none;
             overflow: hidden;
+            height: 100px;
             li {
                 box-sizing: border-box;
                 -moz-box-sizing: border-box;
                 -webkit-box-sizing: border-box;
-                display: table-cell;
-                width: 112px;
+                display: inline-block;
+                margin:0px 5px;
+                width:auto;
+                text-align: center;
+               
                 span {
+                     @include scale(0.8);
                     display: block;
                     text-indent: -9999px;
                     overflow: hidden;
-                    width: 100%;
-                    height: 113px;
-                    background: #fff url(../../images/bg-product-list.png) 50% -91px no-repeat;
-                    -webkit-box-shadow: 0 1px 0 0 #cdd1d2;
-                    box-shadow: 0 1px 0 0 #cdd1d2;
-                    -webkit-border-radius: 5px;
-                    border-radius: 5px;
-                    &.jquery {
-                        background-position: 50% 46px;
-                    }
-                    &.email {
-                        background-position: 50% -206px;
-                    }
-                    &.wp {
-                        background-position: 50% -331px;
-                    }
-                    &.drupal {
-                        background-position: 50% -453px;
-                    }
-                    &.joomla {
-                        background-position: 50% -571px;
-                    }
-                    &.magento {
-                        background-position: 50% -696px;
-                    }
-                    &.shopify {
-                        background-position: 50% -820px;
-                    }
+                    width: 155px;
+                    height: 100px;
+                    -webkit-transition: all 1s ease;
+                         -moz-transition: all 0.3s ease;
+                           -o-transition: all 0.3s ease;
+                          -ms-transition: all 0.3s ease;
+                              transition: all 0.3s ease;
+                      -webkit-filter: grayscale(95%);
+                      &:hover{
+                        cursor: pointer;
+                        -webkit-filter: grayscale(0%);
+                      }        
+                    background: transparent inline-image("bg-product-list.png") left top no-repeat;
+                        &.drupal {
+                            background-position: -158px 0px;
+                            width: 75px;
+                        }
+                        &.opencart {
+                            background-position: -235px 0px;
+                            width: 115px;
+                        }
+                        &.magento {
+                            background-position: -350px 0px;
+                            width: 130px;
+                        }
+                        &.cs-cart {
+                            background-position: -158px 0px;
+                            width: 75px;
+                        }
+                        &.shopify {
+                            background-position: -478px 0px;
+                            width: 95px;
+
+                        }
+                        &.cs-cart {
+                            background-position: -580px 0px;
+                            width: 100px;
+                        }
+                        &.angularjs {
+                            background-position: -683px 0px;
+                            width: 145px;
+                        }
+                        &.backbonejs {
+                            background-position: -835px 0px;
+                            width: 145px;
+                        }
+                        &.jquery {
+                            background-position: -985px 0px;
+                            width: 100px;
+                        }
+                }
+            }
+        }
+        @media(max-width:1366px) {
+             .list-icon-farmus_wapper{
+                bottom:20px;
+             }
+            .list-icon-farmus_content li span{
+               @include scale(0.6);
+            }
+        }
+        @media(max-width:1280px) {
+            .list-icon-farmus_content li{
+                 margin:0px;
+                span{
+                   @include scale(0.6);
                 }
             }
         }
