--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,6 +64,12 @@ html, body {
 .animated.hinge {
     -webkit-animation-duration: 1.2s;
 }
+.line{
+    background: transparent inline-image("green_title_bg.png") center no-repeat;
+    display: block;
+    width: 100%;
+    height: 13px;
+}
 header {
     width: 100%;
     float: left;
@@ -415,15 +421,18 @@ $turquoise:rgba(255, 255, 255, 0.4);
             color: #fff;
             display: block;
             h2{
-                font-size: 30px;
-                margin-top: 15px;
-                font-family: Lato,sans-serif;
-                font-weight: 300;
-                margin-bottom: 5px;
+                font-size: 1.8em;
+                margin-top: 10px;
+                font-family: Lato;
+                font-weight: 400;
+                margin-bottom: 2px;
                 display: inline-block;
             }
+            .line{
+                  @include filter(contrast(1000%));
+            }
             p{
-                font-size: 15px;
+                font-size: 1.2em;
             }
         }
         .pages__what_we_do_header-title{
@@ -479,9 +488,9 @@ $turquoise:rgba(255, 255, 255, 0.4);
                         width: 100%;
                         text-align: center;
                         color: #fff;
-                        font-size: 1.5em;
-                        line-height: 32px;
-                        font-weight: 700;
+                        font-size: 1.2em;
+                        line-height: 1.3em;
+                        font-weight: 600;
                         font-family: 'Open Sans';
                     }
                 }
@@ -496,7 +505,7 @@ $turquoise:rgba(255, 255, 255, 0.4);
                     .preview {
                         width: 100%;
                         @include transition(all .25s 0s ease);
-                        @include box-shadow(0px 0px 20px 0px rgba(0,0,0,0.5));
+                        /*@include box-shadow(0px 0px 20px 0px rgba(0,0,0,0.5));*/
                     }
                 }
                 .readMore {
@@ -530,9 +539,67 @@ $turquoise:rgba(255, 255, 255, 0.4);
         }
     }
     .pages__who_we_are {
-        background: #EEEEEE;
+        background: #f5f5f5 inline-image("texture.jpg") left top;
+        .pages__who_we_are_wapper_content{
+            background:#f0f3f3;
+            margin-top:25px;
+            padding:30px  0;
+        }
+        h2{
+           font-family: Lato, sans-serif;
+            font-weight: 400;
+            font-size: 2.8em;
+            color: #262626;
+        }
+        h4{
+            color: #252525;
+            margin: 0px 0px 10px;
+            font-size: 1.8em;
+            &:hover{
+                color: $blue_light;
+            }
+        }
+        h6 {
+            color: #808080;
+            font-style: italic;
+            font-weight: normal;
+            font-size: 1.2em;
+            margin-bottom: 20px;
+            font-family: 'Lato', sans-serif;
+        }
+        p{
+            font-size: 1em;
+        }
+        .hexagon{
+            display: inline-block;
+            width: 220px;
+            height: 192px;
+            position: relative;
+            overflow: hidden;
+            .hexagon-img{
+                display: inline-block;
+                width: 100%;
+                height: 100%;
+                img{
+                    width: 100%;
+                }
+            }
+            .hexagon-bg{
+                display: inline-block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0px;
+                left: 0px;
+                background: transparent inline-image("hexagon.png") left top;
+            }
+           
+        }
     }
     .pages__get_in_touch {
+        .line{
+                  @include filter(contrast(1000%));
+            }
         .pages__get_in_touch-top,.pages__get_in_touch-map{
             width: 100%;
             display: inline-block;
