test fadein body

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,6 +44,9 @@ html, body {
     font-size: 14px;
     line-height: 22px;
 }
+body{
+    display:none;
+}
 .wrapper, .main #main {
     float: left;
     clear: both;
